# codex-workflow-automation

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
src/codexflow/: ai_utils.py  app_constants.py  app_paths.py  cli.py  commands.py  config_ops.py  core.py  mapping_io.py  mapping_yaml_dump.py  parser.py  prompting.py  runner_utils.py  template_logic.py  template_paths.py
src/codexflow/cmds/: ai.py  profiles.py  run.py  templates_fileops.py  templates_manage.py  templates_meta.py
src/codexflow/parser_parts/: ai_run.py  profiles.py  templates.py
tests/: support.py  test_ai_cli.py  test_cli.py  test_repeat_cli.py  test_templates_cli.py
